--- a/AppStore/Base.lproj/Main.storyboard
+++ b/AppStore/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
         <!--Ranked App List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="RankedAppListViewController" customModule="AppStore" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="RankedAppListViewController" customModule="AppStore" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -37,42 +37,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UVf-Qo-OFc">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="42" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="q8P-5I-v8x">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dK1-13-c1z">
-                                    <size key="itemSize" width="50" height="50"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zV9-lB-iK6">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="sQE-Sd-DmJ"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Kyn-Ho-QDf"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="kvf-Pf-8tE"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="PY8-aG-bfY"/>
                                 </connections>
-                            </collectionView>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="UVf-Qo-OFc" secondAttribute="trailing" id="O21-ho-T3J"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="UVf-Qo-OFc" secondAttribute="bottom" id="aan-HK-Mgl"/>
-                            <constraint firstItem="UVf-Qo-OFc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jDA-u3-6Ka"/>
-                            <constraint firstItem="UVf-Qo-OFc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="sdd-mj-idF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="q8P-5I-v8x" secondAttribute="bottom" id="6c1-Bt-uYB"/>
+                            <constraint firstItem="q8P-5I-v8x" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="FhO-UY-TmD"/>
+                            <constraint firstItem="q8P-5I-v8x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="H0A-Hu-F8a"/>
+                            <constraint firstAttribute="trailing" secondItem="q8P-5I-v8x" secondAttribute="trailing" id="XQS-ct-V8L"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MH6-Va-B1V"/>
                     <connections>
-                        <outlet property="rankedAppListCollectionView" destination="UVf-Qo-OFc" id="9mk-r0-zHN"/>
+                        <outlet property="rankedAppListTableView" destination="q8P-5I-v8x" id="ACX-ma-01n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
