--- a/AppStore/RankedAppList/View/AppTableViewCell.xib
+++ b/AppStore/RankedAppList/View/AppTableViewCell.xib
@@ -13,14 +13,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RankedAppTableViewCell" customModule="AppStore" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AppTableViewCell" id="Cw3-64-Fqm" customClass="AppTableViewCell" customModule="AppStore" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="51"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Cw3-64-Fqm" id="RY7-2m-GUX">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="50.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVM-fe-Jkv">
-                        <rect key="frame" x="13" y="26" width="35" height="0.0"/>
+                        <rect key="frame" x="13" y="25.5" width="35" height="0.0"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="35" id="PbT-lv-gdR"/>
                         </constraints>
@@ -31,15 +31,12 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jdy-lW-JjL">
                         <rect key="frame" x="53" y="5.5" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="0qy-uy-Dn9"/>
+                            <constraint firstAttribute="height" priority="999" constant="40" id="0qy-uy-Dn9"/>
                             <constraint firstAttribute="width" constant="40" id="Vgz-Uw-omI"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJs-46-daE">
                         <rect key="frame" x="103" y="10.5" width="254" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="eDc-ns-NUm"/>
-                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
